--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
     </div>
 
     <section class="campaign-section grid-2">
-        <div class="campaign-card"><img src="./1.png"><div class="campaign-text flex-sb"><span>TOPWEAR AT MIN 40%</span><i class="fa-solid fa-arrow-right"></i></div></div>
-        <div class="campaign-card"><img src="./2.png"><div class="campaign-text flex-sb"><span>BOTTOMS AT MIN 40%</span><i class="fa-solid fa-arrow-right"></i></div></div>
-        <div class="campaign-card"><img src="./3.png"><div class="campaign-text flex-sb"><span>ACCESSORIES AT MIN 30%</span><i class="fa-solid fa-arrow-right"></i></div></div>
-        <div class="campaign-card"><img src="./4.png"><div class="campaign-text flex-sb"><span>DRESSES AT MIN 40%</span><i class="fa-solid fa-arrow-right"></i></div></div>
+        <div class="campaign-card"><img src="./1.png"><div class="hover-btn">ADD TO CART</div><div class="campaign-text flex-sb"><span>TOPWEAR AT MIN 40%</span><i class="fa-solid fa-arrow-right"></i></div></div>
+        <div class="campaign-card"><img src="./2.png"><div class="hover-btn">ADD TO CART</div><div class="campaign-text flex-sb"><span>BOTTOMS AT MIN 40%</span><i class="fa-solid fa-arrow-right"></i></div></div>
+        <div class="campaign-card"><img src="./3.png"><div class="hover-btn">ADD TO CART</div><div class="campaign-text flex-sb"><span>ACCESSORIES AT MIN 30%</span><i class="fa-solid fa-arrow-right"></i></div></div>
+        <div class="campaign-card"><img src="./4.png"><div class="hover-btn">ADD TO CART</div><div class="campaign-text flex-sb"><span>DRESSES AT MIN 40%</span><i class="fa-solid fa-arrow-right"></i></div></div>
     </section>
 
     <section class="new-in-section">
         <div class="section-header flex-sb"><h3>NEW IN</h3><i class="fa-solid fa-arrow-right"></i></div>
         <div class="product-grid grid-5">
-            <div class="product-item"><img src="./6.png"></div>
-            <div class="product-item"><img src="./9.png"></div>
-            <div class="product-item"><img src="./10.png"></div>
-            <div class="product-item"><img src="./17.png"></div>
-            <div class="product-item"><img src="./13.png"></div>
+            <div class="product-item"><img src="./6.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./9.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./10.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./17.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./13.png"><div class="hover-btn">QUICK VIEW</div></div>
         </div>
         <div class="product-grid grid-5" style="margin-top:20px;">
-            <div class="product-item"><img src="./15.png"></div>
-            <div class="product-item"><img src="./14.png"></div>
-            <div class="product-item"><img src="./16.png"></div>
-            <div class="product-item"><img src="./7.png"></div>
-            <div class="product-item"><img src="./11.png"></div>
+            <div class="product-item"><img src="./15.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./14.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./16.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./7.png"><div class="hover-btn">QUICK VIEW</div></div>
+            <div class="product-item"><img src="./11.png"><div class="hover-btn">QUICK VIEW</div></div>
         </div>
     </section>
 
     <section class="campaign-section grid-2">
-        <div class="campaign-card"><img src="./18.png"><div class="campaign-text flex-sb"><span>New Arrivals</span><i class="fa-solid fa-arrow-right"></i></div></div>
-        <div class="campaign-card"><img src="./19.png"><div class="campaign-text flex-sb"><span>Festive 2026</span><i class="fa-solid fa-arrow-right"></i></div></div>
+        <div class="campaign-card"><img src="./18.png"><div class="hover-btn">EXPLORE NOW</div><div class="campaign-text flex-sb"><span>New Arrivals</span><i class="fa-solid fa-arrow-right"></i></div></div>
+        <div class="campaign-card"><img src="./19.png"><div class="hover-btn">EXPLORE NOW</div><div class="hover-btn">EXPLORE NOW</div><div class="campaign-text flex-sb"><span>Festive 2026</span><i class="fa-solid fa-arrow-right"></i></div></div>
     </section>
 
     <section class="single-feature-section">
-        <div class="feature-image-box full-width"><img src="./20.png"></div>
+        <div class="feature-image-box full-width"><img src="./pexels-photo-1926620 (1).jpeg"></div>
         <div class="feature-text"><h4>H&M BEAUTY ESSENTIALS</h4><p>ALL THINGS BEAUTY</p></div>
     </section>
 
@@ -106,6 +106,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
