--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <nav class="navbar flex-sb">
         <div class="nav-left">
             <div class="logo">H&M</div>
-            <div class="nav-links">
-                <a href="#">WOMEN</a><a href="#">MALE</a><a href="#">CHILD</a><a href="#">HOME</a>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger"><i class="fa-solid fa-bars"></i></label>
+            <div class="nav-menu">
+                <div class="nav-links">
+                    <a href="#">WOMEN</a><a href="#">MALE</a><a href="#">CHILD</a><a href="#">HOME</a>
+                </div>
             </div>
         </div>
 
