--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H&M Clone</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,7 +13,8 @@
         <span>SALE: UP TO 60% OFF</span><i class="fa-solid fa-plus"></i>
     </div>
     <hr>
-    <nav class="navbar flex-sb">
+    
+    <nav class="navbar">
         <div class="nav-left">
             <div class="logo">H&M</div>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -23,6 +24,12 @@
                     <a href="#">WOMEN</a><a href="#">MALE</a><a href="#">CHILD</a><a href="#">HOME</a>
                 </div>
             </div>
+        </div>
+        
+        <div class="auth-buttons">
+            <a href="signup.html" class="login-link">Sign Up</a>
+            <span class="divider">|</span>
+            <a href="login.html" class="login-link">Log In</a>
         </div>
 
         <div class="nav-icons">
@@ -79,7 +86,7 @@
     </section>
 
     <section class="single-feature-section">
-        <div class="feature-image-box full-width"><img src="./pexels-photo-1926620 (1).jpeg"></div>
+        <div class="feature-image-box full-width"><img src="./20.jpeg"></div>
         <div class="feature-text"><h4>H&M BEAUTY ESSENTIALS</h4><p>ALL THINGS BEAUTY</p></div>
     </section>
 
@@ -95,7 +102,7 @@
                 <h3>Help</h3><ul><li><a href="#">CUSTOMER SERVICE</a></li><li><a href="#">MY ACCOUNT</a></li><li><a href="#">STORE LOCATOR</a></li><li><a href="#">PRIVACY</a></li><li><a href="#">CONTACT</a></li></ul>
             </div>
             <div class="footer-col">
-                <h3>Become a member</h3><p>Get 10% discount.</p><a href="#" class="more-info">REGISTER NOW</a>
+                <h3>Become a member</h3><p>Get 10% discount.</p><a href="./signup.html" class="more-info">REGISTER NOW</a>
             </div>
         </div>
     </footer>
